updates to readme
